# calculator

./: CMakeLists.txt  README.md
src/main/cpp/: calculator.cpp  main.cpp  types.h
src/main/include/: calculator.h  types.h  utils.h
src/main/js/: calculator.js
src/main/python/: calculator.py
src/test/cpp/: calculator.test.cpp
